chore(http): amelioration des codes http
